# ChangeLog for sys-apps/watchdog
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/watchdog/ChangeLog,v 1.26 2009/03/22 22:12:34 vapier Exp $

*watchdog-5.6 (22 Mar 2009)

  22 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +files/watchdog-5.6-headers.patch, +watchdog-5.6.ebuild:
  Version bump.

*watchdog-5.5 (25 Feb 2009)

  25 Feb 2009; Mike Frysinger <vapier@gentoo.org> +watchdog-5.5.ebuild:
  Version bump.

  22 Mar 2008; Joseph Jezak <josejx@gentoo.org> watchdog-5.4.ebuild:
  Marked ppc stable for bug #213809.

  20 Mar 2008; Markus Meier <maekke@gentoo.org> watchdog-5.4.ebuild:
  amd64/x86 stable, bug #213809

  04 Nov 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing myself as the maintainer.

  11 Sep 2007; Christian Heim <phreak@gentoo.org> watchdog-5.4.ebuild:
  Comment the unused epatch for the Debian patch (for now), thanks to Patrizio
  Bassi <hetfield666 at gmail.com> in #192040.

*watchdog-5.4 (09 Sep 2007)

  09 Sep 2007; Christian Heim <phreak@gentoo.org> +watchdog-5.4.ebuild,
  -watchdog-5.4_p1.ebuild:
  Using the correct SRC_URI (it's now hosted as a project on sourceforge),
  HOMEPAGE.

  09 Sep 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Fixing the metadata.

*watchdog-5.4_p1 (09 Sep 2007)

  09 Sep 2007; Christian Heim <phreak@gentoo.org> +watchdog-5.4_p1.ebuild:
  Version bump. Fixing #191275 (thanks to Martin von Gagern <Martin.vGagern at
  gmx.net>).

  13 Apr 2007; Mike Frysinger <vapier@gentoo.org>
  -files/watchdog-5.3.1-headers.patch, -files/watchdog-5.3.1-sundries.patch,
  -files/watchdog-5.3.1-uclibc.patch, watchdog-5.3.1_p2.ebuild:
  No point in duplicating patches.

  11 Apr 2007; Christian Heim <phreak@gentoo.org> watchdog-5.2.6_p2.ebuild:
  Fixing ebuild.badheader.

*watchdog-5.3.1_p2 (11 Apr 2007)

  11 Apr 2007; Christian Heim <phreak@gentoo.org>
  +files/watchdog-5.3.1-headers.patch, +files/watchdog-5.3.1-sundries.patch,