@@ -5,19 +5,17 @@ AUX watchdog-5.2.6-headers.patch 2266 RMD160 8329bd4e6b8b634cde1fb8cf90f7a413eab
 AUX watchdog-5.2.6-uclibc.patch 349 RMD160 3f9cd36b24898ff13dc6c9c6914a2b8507afd3a0 SHA1 b76ca6f6d6e2947826ec7c572848f9b66b14313d SHA256 56ee2694a2cac25782247920fc8f5a44c10fce938bbc66d8d9cf5fbdd820aeea
 AUX watchdog-5.6-headers.patch 960 RMD160 eb645cbd6dac544178f765dcde64916b08cae5a6 SHA1 f21da0c210f7ff4c8710433a1a39c793c761ee30 SHA256 cde27dd7c8b9ee12d0fbe425e1a84a6efa9584a5cb89ba3bba4cac28bbd71053
 AUX watchdog-conf.d 272 RMD160 81bfaea980008182e595b07e4c04bef3bd866254 SHA1 5b607ca1fc96798a3f5d351d0136cac4b792b0fd SHA256 344c6926063c99a4277bd9b79231b94346354a50b35de9693333289b6ba6c4f8
-AUX watchdog-init.d 540 RMD160 d0bffe94b9b85c2bbc78c317d0db01fd80081d70 SHA1 b909c05ae240dbe0f46efa6523d862de8fb70ebb SHA256 d60b4f9b28c75db5681a7502012d400950911f1215e25f7a98a4620f4cf30897
+AUX watchdog-init.d 966 RMD160 e0161d7468d55b19469450d885ea111491c66a5c SHA1 742e802353dbf055fa5b684087b897d99f714f5c SHA256 6972aa98af92561e04a5fd5a37eb3aac323a88fa596d457586ac157c508e943a
 DIST watchdog-5.4.tar.gz 176060 RMD160 b1eb0da66f49b8a6c55323898c19ba3d1cc44147 SHA1 5510a81b9c501c941dfbb6c10aaa79e6853dc6b7 SHA256 6c5bfb2edae5c289233b6cd65393bb7414a2d30ad4d1239c207a659a4232d91a
-DIST watchdog-5.5.tar.gz 182164 RMD160 80f42fcbab8799d029f3f43c85331043a26a9b57 SHA1 7da32b5efdbf8a8168f3fa2318b0980c257ea7a1 SHA256 2990cca00114b85e522bad4b7609f2d57198ff61584a099c481fce11b554b1a4
 DIST watchdog-5.6.tar.gz 187681 RMD160 a2ee55757ebccb3032577edf2834bf202d88c4f1 SHA1 de1da5d64e5aad1a0eabdd82788271c3d9deb444 SHA256 a2c7d6726e092315dbb047211b754528e4532521678a30e16f60a31bb86a7f74
 EBUILD watchdog-5.4.ebuild 908 RMD160 b500e1b84df6f704582cf2929674968dbf068b2b SHA1 fe4bb00952b640e57546a53b775bd8efc6330b1b SHA256 979f1f402946c1264fdc95564c7a92b47b352c393a5191a47236ae64b82deb1f
-EBUILD watchdog-5.5.ebuild 893 RMD160 4ddf07666d60f78cdf0220b8ba3897d4762d6e47 SHA1 c3783e4c70c33a427b561c233497108424a58aea SHA256 16e937cbfad37f1db7f6cbe7e0495e93d4256433277df65d161f19f8a911e8ee
 EBUILD watchdog-5.6.ebuild 841 RMD160 3e75c58e8751949ba488640a5d7a691800f1548a SHA1 b02c13ed2ecb94ad012be389d8f58f310de477af SHA256 2e6ba69917cce3089025fea88c04b55433ab638fdf62c32f87af161fcfcc2dd6
-MISC ChangeLog 6453 RMD160 36d4504678e719217ab739bcb04889a17b1ea7cf SHA1 329e89f7b9681124de8b9e8727be4dd8011404e1 SHA256 f2d9974ccd0dbd04a2be06aa9b47830d93402e2ce673a5cbe6d50344b9ea4ef2
+MISC ChangeLog 6616 RMD160 91417d6e44664669f91cd6b2d17424c86333e5e9 SHA1 088982bf03d59eb63a3b47a32bcb97c2e98b15b4 SHA256 708ecde3b98489316a5337b14b24b3047a52d99b9a1257b3eee8c8586c1714d8
 MISC metadata.xml 165 RMD160 84307ea324cd4f0f46d52f2fa096a1873e2fbe53 SHA1 c7b83ef947fe7e8273cc512fee9bba06586a58f9 SHA256 23a8851c12bd4cf7cf0528250ad5605be6b0780bbec0c51331d6d2c618c13f6a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.10 (GNU/Linux)
+Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAknGt9cACgkQn/5bYzqsSmGlPACdFdvxJgE0lLLmlTQV/q7Mmfxa
-X1sAoIn9Qf1aBRRz3fSgrsZ5MoemKdjd
-=Roum
+iEYEARECAAYFAkoO8PMACgkQn/5bYzqsSmGjuACguD3MjUkIuYDRZMeMDse6kLGj
+svMAoL3uXfXglXVj1ufQnFs0RIvEjQLv
+=Icp2
 -----END PGP SIGNATURE-----
